fixed large screen too big

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -19,7 +19,7 @@ $font-display: "Lato"; ///"Gravitas One, cursive"; //, cursive;
 
 // RESPONSIVE BREAKPOINTS
 //divide pixels by 16
-$bp-max: 100em; //1600px
+$bp-max: 1440px; //100em; //1600px
 $bp-largest: 75em; // 1200px
 $bp-larger: 74em;
 $bp-large: 62.5em; // 1000px
@@ -221,17 +221,17 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; // 10px/16px = 62.5% -> 1rem = 10px
   @media only screen and (min-width: 1800px) {
-    font-size: 70%;
+    font-size: 65%;
   }
-  @media only screen and (min-width: 2400px) {
-    font-size: 120%;
-  }
-  @media only screen and (min-width: 3600px) {
-    font-size: 150%;
-  }
+  // @media only screen and (min-width: 2400px) {
+  //   font-size: 120%;
+  // }
+  // @media only screen and (min-width: 3600px) {
+  //   font-size: 150%;
+  // }
 
   @media only screen and (max-width: $bp-largest) {
-    font-size: 50%;
+    // font-size: 50%;
   } //undefined var
 
   @media only screen and (max-width: $bp-medium) {
