--- a/styles/components/nav.scss
+++ b/styles/components/nav.scss
@@ -39,9 +39,10 @@
     width: 100%;
     height: 8rem;
     z-index: 1000;
+    max-width: 1440px;
+
     @media only screen and (min-width: $bp-largest) {
       // max-width: 1400px;
-      max-width: 160rem;
       margin: 0 auto;
       left: 50%;
       transform: translateX(-50%);
