--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -8,7 +8,7 @@
   max-width: 100%;
   background-color: #f2f2f2;
   min-height: 100vh;
-  max-width: 160rem;
+  max-width: 1440px;
   margin: 0 auto;
   &__heading-container {
     z-index: 1000;
