--- a/styles/pages/landing-page.scss
+++ b/styles/pages/landing-page.scss
@@ -8,7 +8,7 @@
   min-height: 100vh;
 }
 .landing-page-header {
-  max-width: 160rem;
+  max-width: 1440px;
   margin: 0 auto;
   background-image: url("/hero-bg-small-mr.png");
   background-size: cover;
