--- a/styles/pages/location.scss
+++ b/styles/pages/location.scss
@@ -5,7 +5,7 @@
   //yeah so just change this to min height so doesnt show white but then theres the clash of colors between sections wtf
   min-height: 100vh;
   overflow: hidden;
-  max-width: 160rem;
+  max-width: 1440px;
   margin: 0 auto;
   position: relative;
   // max-width: 100%;
